[gd_scene load_steps=21 format=2]

[ext_resource path="res://ui/menus/title_screen/title_screen.gd" type="Script" id=1]
[ext_resource path="res://ui/menus/menus.tscn" type="PackedScene" id=2]
[ext_resource path="res://ui/menus/title_screen/title_screen_menus.gd" type="Script" id=3]
[ext_resource path="res://ui/menus/pages/main_menu.tscn" type="PackedScene" id=4]
[ext_resource path="res://resources/themes/base_theme.tres" type="Theme" id=5]
[ext_resource path="res://ui/menus/title_screen/splash_art_mist_mid.png" type="Texture" id=6]
[ext_resource path="res://ui/menus/title_screen/brotato_idle.tres" type="Animation" id=7]
[ext_resource path="res://ui/menus/title_screen/splash_art_mist_front.png" type="Texture" id=8]
[ext_resource path="res://ui/menus/title_screen/splash_art_brotato.png" type="Texture" id=9]
[ext_resource path="res://ui/menus/pages/menu_credits.tscn" type="PackedScene" id=10]
[ext_resource path="res://ui/menus/title_screen/splash_art_bg.png" type="Texture" id=11]
[ext_resource path="res://ui/menus/title_screen/splash_art_mist_back.png" type="Texture" id=12]
[ext_resource path="res://ui/menus/title_screen/splash_art_post_processing.png" type="Texture" id=13]
[ext_resource path="res://ui/menus/pages/progression_ui.tscn" type="PackedScene" id=14]
[ext_resource path="res://ui/menus/pages/mods/menu_mods.tscn" type="PackedScene" id=15]

[sub_resource type="Animation" id=4]
length = 0.001
tracks/0/type = "value"
tracks/0/path = NodePath(".:rect_position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Vector2( 0, 0 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("../BackgroundMistBack:rect_position")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Vector2( 0, 0 ) ]
}
tracks/2/type = "bezier"
tracks/2/path = NodePath("../BackgroundMistBack:rect_position:x")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"points": PoolRealArray( -150, -0.25, 0, 0.25, 0 ),
"times": PoolRealArray( 0 )
}
tracks/3/type = "bezier"
tracks/3/path = NodePath("../BackgroundMistBack:rect_position:y")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/keys = {
"points": PoolRealArray( 0, -0.25, 0, 0.25, 0 ),
"times": PoolRealArray( 0 )
}

[sub_resource type="Animation" id=5]
resource_name = "mist_back"
length = 6.0
loop = true
step = 3.0
tracks/0/type = "value"
tracks/0/path = NodePath("../BackgroundMistBack:rect_position")
tracks/0/interp = 2
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 3, 6 ),
"transitions": PoolRealArray( 1.27456, 1, 0.5 ),
"update": 0,
"values": [ Vector2( -150, 0 ), Vector2( 0, 0 ), Vector2( -150, 0 ) ]
}

[sub_resource type="Animation" id=1]
length = 0.001
tracks/0/type = "bezier"
tracks/0/path = NodePath("BackgroundBrotato:rect_position:x")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"points": PoolRealArray( -75, -0.25, 0, 0.25, 0 ),
"times": PoolRealArray( 0 )
}
tracks/1/type = "bezier"
tracks/1/path = NodePath("BackgroundBrotato:rect_position:y")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"points": PoolRealArray( 0, -0.25, 0, 0.25, 0 ),
"times": PoolRealArray( 0 )
}
tracks/2/type = "value"
tracks/2/path = NodePath("BackgroundBrotato:rect_scale")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Vector2( 1, 1 ) ]
}

[sub_resource type="Animation" id=2]
length = 0.001
tracks/0/type = "value"
tracks/0/path = NodePath(".:rect_position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Vector2( 0, 0 ) ]
}

[sub_resource type="Animation" id=3]
resource_name = "mist_front"
length = 6.0
loop = true
step = 3.0
tracks/0/type = "value"
tracks/0/path = NodePath(".:rect_position")
tracks/0/interp = 2
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 3, 6 ),
"transitions": PoolRealArray( 1.23114, 1, 0.5 ),
"update": 0,
"values": [ Vector2( 0, 0 ), Vector2( -150, 0 ), Vector2( 0, 0 ) ]
}

[node name="TitleScreen" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_top = -1.0
margin_bottom = -1.0
theme = ExtResource( 5 )
script = ExtResource( 1 )

[node name="Background" type="TextureRect" parent="."]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -1035.0
margin_top = -540.0
margin_right = 1035.0
margin_bottom = 540.0
texture = ExtResource( 11 )
__meta__ = {
"_edit_lock_": true
}

[node name="BackgroundMistBack" type="TextureRect" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = -150.0
margin_right = 814080.0
margin_bottom = 457920.0
texture = ExtResource( 12 )
__meta__ = {
"_edit_lock_": true
}

[node name="AnimationPlayer" type="AnimationPlayer" parent="BackgroundMistBack"]
root_node = NodePath("../../BackgroundMistFront")
autoplay = "mist_back"
anims/RESET = SubResource( 4 )
anims/mist_back = SubResource( 5 )

[node name="BackgroundMistMid" type="TextureRect" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = -75.0
margin_right = 75.0
size_flags_horizontal = 0
texture = ExtResource( 6 )
stretch_mode = 4
__meta__ = {
"_edit_lock_": true
}

[node name="BackgroundBrotato" type="TextureRect" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = -75.0
margin_right = 812235.0
margin_bottom = 456840.0
texture = ExtResource( 9 )

[node name="AnimationPlayer" type="AnimationPlayer" parent="BackgroundBrotato"]
root_node = NodePath("../..")
autoplay = "brotato_idle"
anims/RESET = SubResource( 1 )
anims/brotato_idle = ExtResource( 7 )

[node name="BackgroundMistFront" type="TextureRect" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
margin_right = 814230.0
margin_bottom = 457920.0
texture = ExtResource( 8 )
__meta__ = {
"_edit_lock_": true
}

[node name="AnimationPlayer" type="AnimationPlayer" parent="BackgroundMistFront"]
autoplay = "mist_front"
anims/RESET = SubResource( 2 )
anims/mist_front = SubResource( 3 )

[node name="BackgroundPostProcessing" type="TextureRect" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = -75.0
margin_right = 75.0
size_flags_horizontal = 0
texture = ExtResource( 13 )
stretch_mode = 4
__meta__ = {
"_edit_lock_": true
}

[node name="AttenuateBackground" type="ColorRect" parent="."]
visible = false
modulate = Color( 1, 1, 1, 0.666667 )
anchor_right = 1.0
anchor_bottom = 1.0
color = Color( 0, 0, 0, 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="MarginContainer" type="MarginContainer" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
custom_constants/margin_right = 50
custom_constants/margin_top = 25
custom_constants/margin_left = 50
custom_constants/margin_bottom = 25
__meta__ = {
"_edit_lock_": true,
"_edit_use_anchors_": false
}

[node name="Menus" parent="MarginContainer" instance=ExtResource( 2 )]
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = 50.0
margin_top = 25.0
margin_right = 1870.0
margin_bottom = 1055.0
script = ExtResource( 3 )

[node name="MainMenu" parent="MarginContainer/Menus" instance=ExtResource( 4 )]
margin_top = 47.0

[node name="MenuCredits" parent="MarginContainer/Menus" instance=ExtResource( 10 )]
visible = false

[node name="ProgressionUI" parent="MarginContainer/Menus" instance=ExtResource( 14 )]
visible = false
margin_bottom = 14.0

[node name="MenuMods" parent="MarginContainer/Menus" instance=ExtResource( 15 )]
visible = false

[connection signal="credits_button_pressed" from="MarginContainer/Menus/MainMenu" to="MarginContainer/Menus" method="_on_MainMenu_credits_button_pressed"]
[connection signal="mods_button_pressed" from="MarginContainer/Menus/MainMenu" to="MarginContainer/Menus" method="_on_MainMenu_mods_button_pressed"]
[connection signal="progress_button_pressed" from="MarginContainer/Menus/MainMenu" to="MarginContainer/Menus" method="_on_MainMenu_progress_button_pressed"]
[connection signal="back_button_pressed" from="MarginContainer/Menus/MenuCredits" to="MarginContainer/Menus" method="_on_MenuCredits_back_button_pressed"]
[connection signal="back_button_pressed" from="MarginContainer/Menus/ProgressionUI" to="MarginContainer/Menus" method="_on_ProgressionUI_back_button_pressed"]
[connection signal="back_button_pressed" from="MarginContainer/Menus/MenuMods" to="MarginContainer/Menus" method="_on_MenuMods_back_button_pressed"]

[editable path="MarginContainer/Menus"]
